--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	                <span class="number" data-number="3"></span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="#" class="btn btn-primary py-3 px-3" onclick="window.open('jakaria.pdf')">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
